--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1"/>
+
   <title>Kacper Pikulski - webdeveloper</title>
   <link rel="icon" href="static/images/favicon.png">
   <link rel="stylesheet"
@@ -24,7 +25,7 @@
           integrity="sha256-w49DIDk8itgSjjuoof5lTxYKwcjWJ7Z2sRW3nU1StNA=" crossorigin="anonymous"></script>
 </head>
 
-<body data-spy="scroll" data-target="#navbar" data-offset="0">
+<body data-spy="scroll" data-target="#navbar" data-offset="50">
   <header>
     <nav id="navbar" class="navbar fixed-top bg-light">
       <div class="container">
