fix autocalculate height on mobile devices

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1"/>
-
+  <meta name="viewport" content="width=device-width, height=device-height,
+        initial-scale=1, maximum-scale=1, user-scalable=0"/>
   <title>Kacper Pikulski - webdeveloper</title>
   <link rel="icon" href="static/images/favicon.png">
   <link rel="stylesheet"
