moved hero background image 50px to the left

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </nav>
   </header>
   <main>
-    <section id="about" class="section section__hero">
+    <section id="about" class="section section__hero full-vh">
       <div class="container text-white">
         <div class="row">
           <div class="col-12 col-sm-10 col-md-8 col-lg-7 col-xl-7">
@@ -76,7 +76,7 @@
         <hr class="my-4 bg-dark header-bar waypoint" data-animation="slideInRight" data-delay=".25s">
       </div>
     </section>
-    <section id="contact" class="section bg-dark text-white section__contact">
+    <section id="contact" class="section bg-dark text-white section__contact full-vh">
       <div class="container">
         <h1 class="display-4 waypoint" data-animation="slideInLeft">Kontakt</h1>
         <hr class="my-4 bg-white header-bar waypoint" data-animation="slideInRight" data-delay=".25s">
