scrollspy now initiated by js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           integrity="sha256-w49DIDk8itgSjjuoof5lTxYKwcjWJ7Z2sRW3nU1StNA=" crossorigin="anonymous"></script>
 </head>
 
-<body data-spy="scroll" data-target="#navbar" data-offset="50">
+<body>
   <header>
     <nav id="navbar" class="navbar fixed-top bg-light">
       <div class="container">
@@ -64,7 +64,7 @@
         </div>
       </div>
     </section>
-    <section id="offer" class="section bg-dark text-white section__offer">
+    <section id="offer" class="section bg-dark text-white section__offer full-vh">
       <div class="container">
         <h1 class="display-4 waypoint" data-animation="slideInLeft">Oferta</h1>
         <hr class="my-4 bg-white header-bar waypoint" data-animation="slideInRight" data-delay=".25s">
