refactor whole app

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
           integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous">
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"
-          integrity="sha256-w49DIDk8itgSjjuoof5lTxYKwcjWJ7Z2sRW3nU1StNA=" crossorigin="anonymous"></script>
+          integrity="sha256-w49DIDk8itgSjjuoof5lTxYKwcjWJ7Z2sRW3nU1StNA=" crossorigin="anonymous">
+  </script>
+  <!-- dev only
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/89/three.min.js"
+          integrity="sha256-dhMyiyXEwZJ//9n8lUerz//P7hJX9SyNJZ5ZZ3Osozo=" crossorigin="anonymous">
+  </script> !-->
 </head>
 
 <body>
@@ -85,6 +90,9 @@
     </section>
   </main>
   <script src="static/js/vendor/blast.js"></script>
+  <script src="static/js/app/utils.js"></script>
+  <script src="static/js/app/app.js"></script>
+  <script src="static/js/app/about.js"></script>
   <script src="static/js/main.js"></script>
 </body>
 
