changed app.about to app.home & added new app.about section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <nav id="navbar" class="navbar fixed-top bg-light">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#about">
+          <a class="navbar-brand" href="#home">
             <h1 class="display-5 text-dark"><b>pikulski</b>.me</h1>
           </a>
         </div>
@@ -57,7 +57,7 @@
     </nav>
   </header>
   <main>
-    <section id="about" class="section section__hero full-vh">
+    <section id="home" class="section section__hero full-vh">
       <div class="container text-white">
         <div class="row">
           <div class="col-12 col-sm-10 col-md-8 col-lg-7 col-xl-7">
@@ -67,6 +67,12 @@
             <p class="display-6">Jestem sobie fajnym chłopakiem.</p>
           </div>
         </div>
+      </div>
+    </section>
+    <section id="about" class="section section__offer full-vh">
+      <div class="container">
+        <h1 class="display-4 waypoint" data-animation="slideInLeft">O mnie</h1>
+        <hr class="my-4 bg-dark header-bar waypoint" data-animation="slideInRight" data-delay=".25s">
       </div>
     </section>
     <section id="offer" class="section bg-dark text-white section__offer full-vh">
@@ -92,7 +98,7 @@
   <script src="static/js/vendor/blast.js"></script>
   <script src="static/js/app/utils.js"></script>
   <script src="static/js/app/app.js"></script>
-  <script src="static/js/app/about.js"></script>
+  <script src="static/js/app/home.js"></script>
   <script src="static/js/main.js"></script>
 </body>
 
