use CanvasRenderer if webGL is not available on device

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
       </div>
     </section>
   </main>
+  <script src="static/js/vendor/renderers/Projector.js"></script>
+  <script src="static/js/vendor/renderers/CanvasRenderer.js"></script>
   <script src="static/js/app/utils.js"></script>
   <script src="static/js/app/app.js"></script>
   <script src="static/js/app/home.js"></script>
