fixed setTimeout throttle on Chrome browsers

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/89/three.min.js"
           integrity="sha256-dhMyiyXEwZJ//9n8lUerz//P7hJX9SyNJZ5ZZ3Osozo=" crossorigin="anonymous">
   </script>
+  <script src="static/js/vendor/requestTimeout.js"></script>
 </head>
 
 <body>
