remove easter egg

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="container">
         <h1 class="display-4 waypoint" data-animation="slideInLeft">Kontakt</h1>
         <hr class="my-4 bg-white header-bar waypoint" data-animation="slideInRight" data-delay=".25s">
-        <div class="waypoint" data-animation="slideInRight" data-delay="0.5s">chujchuj</div>
+        <div class="waypoint" data-animation="slideInRight" data-delay="0.5s"></div>
       </div>
     </section>
   </main>
