--- a/index.html
+++ b/index.html
@@ -1,74 +1,78 @@
 <!DOCTYPE html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, height=device-height,
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, height=device-height,
         initial-scale=1, maximum-scale=1, user-scalable=0"/>
-  <title>Kacper Pikulski - webdeveloper</title>
-  <link rel="icon" href="static/images/favicon.png">
-  <link rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
-        integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-  <link rel="stylesheet" href="static/css/style.css">
+    <title>Kacper Pikulski - webdeveloper</title>
+    <link rel="icon" href="static/images/favicon.png">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+          integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="static/css/style.css">
 
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-          integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
-          integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous">
-  </script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
-          integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"
-          integrity="sha256-w49DIDk8itgSjjuoof5lTxYKwcjWJ7Z2sRW3nU1StNA=" crossorigin="anonymous">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/89/three.min.js"
-          integrity="sha256-dhMyiyXEwZJ//9n8lUerz//P7hJX9SyNJZ5ZZ3Osozo=" crossorigin="anonymous">
-  </script>
-  <script src="static/js/vendor/requestTimeout.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+            integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+            integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"
+            integrity="sha256-w49DIDk8itgSjjuoof5lTxYKwcjWJ7Z2sRW3nU1StNA=" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/89/three.min.js"
+            integrity="sha256-dhMyiyXEwZJ//9n8lUerz//P7hJX9SyNJZ5ZZ3Osozo=" crossorigin="anonymous">
+    </script>
+    <script src="static/js/vendor/requestTimeout.js"></script>
 </head>
 
+<!-- IN PROGRESS OF REFACTOR!-->
 <body>
-  <header>
-    <nav id="navbar" class="navbar fixed-top bg-light">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#home">
-            <h1 class="display-5 text-dark"><b>pikulski</b>.me</h1>
-          </a>
-        </div>
-        <ul id="nav" class="nav text-dark">
-          <li class="nav-item">
-            <a class="nav-link display-6" href="#about">O mnie</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link display-6" href="#offer">Oferta</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link display-6" href="#portfolio">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link display-6" href="#contact">Kontakt</a>
-          </li>
-        </ul>
+<!--
+<header>
+  <nav id="navbar" class="navbar fixed-top bg-light">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#home">
+          <h1 class="display-5 text-dark"><b>pikulski</b>.me</h1>
+        </a>
       </div>
-    </nav>
-  </header>
-  <main>
+      <ul id="nav" class="nav text-dark">
+        <li class="nav-item">
+          <a class="nav-link display-6" href="#about">O mnie</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link display-6" href="#offer">Oferta</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link display-6" href="#portfolio">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link display-6" href="#contact">Kontakt</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+-->
+<main>
     <section id="home" class="flex section__hero full-vh">
-      <div id="heroAnimation"></div>
-      <div class="flex text-white text-center">
-        <h1 class="display-4">
-          <span class="hidden">Cześć,</span>
-          <span class="hidden">nazywam się</span>
-          <span class="hidden"><b>Kacper Pikulski</b></span>
-          <br>
-          <span class="hidden">Jestem web developerem.</span>
-        </h1>
-      </div>
+        <div id="heroAnimation"></div>
+        <div class="flex text-white text-center">
+            <h1 class="display-4">
+                <span class="hidden">Cześć,</span>
+                <span class="hidden">nazywam się</span>
+                <span class="hidden"><b>Kacper Pikulski</b></span>
+                <br>
+                <span class="hidden">Jestem web developerem.</span>
+            </h1>
+        </div>
     </section>
+    <!--
     <section id="about" class="section section__offer full-vh">
       <div class="container">
         <h1 class="display-4 waypoint" data-animation="slideInLeft">O mnie</h1>
@@ -87,20 +91,21 @@
         <hr class="my-4 bg-dark header-bar waypoint" data-animation="slideInRight" data-delay=".25s">
       </div>
     </section>
-    <section id="contact" class="section bg-dark text-white section__contact full-vh">
-      <div class="container">
-        <h1 class="display-4 waypoint" data-animation="slideInLeft">Kontakt</h1>
-        <hr class="my-4 bg-white header-bar waypoint" data-animation="slideInRight" data-delay=".25s">
-        <div class="waypoint" data-animation="slideInRight" data-delay="0.5s"></div>
-      </div>
+    !-->
+    <section id="contact" class="section section__contact full-vh">
+        <div class="container">
+            <h1 class="display-4 waypoint" data-animation="slideInLeft">Kontakt</h1>
+            <hr class="my-4 bg-dark header-bar waypoint" data-animation="slideInRight" data-delay=".25s">
+            <div class="waypoint" data-animation="slideInRight" data-delay="0.5s"></div>
+        </div>
     </section>
-  </main>
-  <script src="static/js/vendor/renderers/Projector.js"></script>
-  <script src="static/js/vendor/renderers/CanvasRenderer.js"></script>
-  <script src="static/js/app/utils.js"></script>
-  <script src="static/js/app/app.js"></script>
-  <script src="static/js/app/home.js"></script>
-  <script src="static/js/main.js"></script>
+</main>
+<script src="static/js/vendor/renderers/Projector.js"></script>
+<script src="static/js/vendor/renderers/CanvasRenderer.js"></script>
+<script src="static/js/app/utils.js"></script>
+<script src="static/js/app/app.js"></script>
+<script src="static/js/app/home.js"></script>
+<script src="static/js/main.js"></script>
 </body>
 
 </html>
