Add bottom arrow to hero & reindent style.css

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 -->
 <main>
     <section id="home" class="flex section__hero full-vh">
-        <div id="heroAnimation"></div>
+        <div id="heroAnimation" class="heroAnimation"></div>
         <div class="flex text-white text-center">
             <h1 class="display-4">
                 <span class="hidden">Cześć,</span>
@@ -70,6 +70,11 @@
                 <br>
                 <span class="hidden">Jestem web developerem.</span>
             </h1>
+        </div>
+        <div class="hero__arrow-container">
+            <a href="#kontakt">
+                <img src="static/images/arrow_down.svg" class="hero__arrow-icon"/>
+            </a>
         </div>
     </section>
     <!--
@@ -92,7 +97,7 @@
       </div>
     </section>
     !-->
-    <section id="contact" class="section section__contact full-vh">
+    <section id="kontakt" class="section section__contact full-vh">
         <div class="container">
             <h1 class="display-4 waypoint" data-animation="slideInLeft">Kontakt</h1>
             <hr class="my-4 bg-dark header-bar waypoint" data-animation="slideInRight" data-delay=".25s">
