Fixed contact form responsibility & added encouraging text above arrow

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                 <span class="hidden">Jestem web developerem.</span>
             </h1>
         </div>
-        <div class="hero__arrow-container animated bounce">
+        <div class="hero__arrow-container animated bounce text-center text-white">
+            <p>Chcesz ze mną współpracować? Skontaktuj się ze mną!</p>
             <a href="#kontakt">
                 <img src="static/images/arrow_down.svg" class="hero__arrow-icon"/>
             </a>
@@ -99,12 +100,12 @@
     !-->
     <section id="kontakt" class="section section__contact full-vh">
         <div class="container">
-            <h1 class="display-4 waypoint" data-animation="slideInLeft">Kontakt</h1>
+            <h2 class="display-4 waypoint" data-animation="slideInLeft">Kontakt</h2>
             <hr class="my-4 bg-dark header-bar waypoint" data-animation="slideInRight" data-delay=".25s">
             <div class="waypoint" data-animation="slideInRight" data-delay="0.5s"></div>
             <article>
                 <div class="row justify-content-center contact-form__container">
-                    <div class="col-6">
+                    <div class="col-12 col-xs-10 col-md-8 col-lg-7 col-xl-6">
                         <header class="contact-form__header text-center">
                             <h3>Napisz wiadomość</h3>
                         </header>
